# ai-engineer-interview

./: README.md
ai-engineer-interview/: .env.example  README.md  pyproject.toml
ai-engineer-interview/src/: database.py  main.py  models.py  utils.py
ai-engineer-interview/tests/: test_database.py  test_main.py  test_models.py
