[project]
name = "ai-engineer-assessment"
version = "0.1.0"
description = "Technical assessment for AI Engineer candidates"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "pytest==7.4.3",
    "black==23.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.6",
    "mypy==1.7.1",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]